# koshi

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  deny.toml  install.ps1  install.sh
config-docs/: README.md  (+5 more)
crates/koshi/: Cargo.toml
crates/koshi-error/: Cargo.toml
crates/koshi-error/src/: lib.rs  tests.rs
crates/koshi-ipc/: Cargo.toml
crates/koshi-ipc/src/: endpoint.rs  error.rs  handshake.rs  lib.rs  protocol.rs  transport.rs  validate.rs
crates/koshi-ipc/src/endpoint/: tests.rs
crates/koshi-ipc/src/error/: tests.rs
crates/koshi-ipc/src/handshake/: tests.rs
crates/koshi-ipc/src/protocol/: tests.rs
crates/koshi-ipc/src/transport/: tests.rs
crates/koshi-ipc/src/validate/: tests.rs
crates/koshi-layout/: Cargo.toml
crates/koshi-layout/src/: content.rs  edit.rs  error.rs  focus.rs  lib.rs  mode.rs  normalize.rs  resize.rs  size.rs  snapshot.rs  solver.rs  template.rs  test_trees.rs  tree.rs
crates/koshi-layout/src/content/: tests.rs
crates/koshi-layout/src/edit/: tests.rs
crates/koshi-layout/src/focus/: tests.rs
crates/koshi-layout/src/layout/: state.rs  tests.rs
crates/koshi-layout/src/mode/: tests.rs
crates/koshi-layout/src/normalize/: tests.rs
crates/koshi-layout/src/resize/: tests.rs
crates/koshi-layout/src/size/: tests.rs
crates/koshi-layout/src/snapshot/: tests.rs
crates/koshi-layout/src/solver/: tests.rs
crates/koshi-layout/src/template/: tests.rs
crates/koshi-layout/src/tree/: tests.rs
crates/koshi-layout/tests/: properties.rs
crates/koshi-observability/: Cargo.toml
crates/koshi-observability/src/: cleanup.rs  diagnostics.rs  lib.rs  logging.rs
crates/koshi-observability/src/cleanup/: tests.rs
crates/koshi-observability/src/diagnostics/: state.rs  tests.rs
crates/koshi-observability/src/logging/: event_log.rs  tests.rs
crates/koshi-pty/: Cargo.toml
crates/koshi-pty/src/: backend.rs  cwd.rs  env.rs  error.rs  kill.rs  lib.rs  portable.rs  resize.rs
crates/koshi-pty/src/backend/: state.rs
crates/koshi-pty/src/cwd/: tests.rs
crates/koshi-pty/src/env/: tests.rs
crates/koshi-pty/src/kill/: tests.rs
crates/koshi-pty/src/portable/: tests.rs
crates/koshi-pty/src/resize/: tests.rs
crates/koshi-pty/tests/: portable.rs  portable_windows.rs
crates/koshi-renderer/: Cargo.toml
crates/koshi-renderer/src/: error.rs  hit_test.rs  lib.rs  render.rs  snapshot.rs  statusline_hints.rs  theme.rs
crates/koshi-renderer/src/hit_test/: tests.rs
crates/koshi-renderer/src/render/: style.rs  tabline.rs  tests.rs
crates/koshi-renderer/src/snapshot/: tests.rs
crates/koshi-renderer/src/statusline_hints/: tests.rs
crates/koshi-renderer/src/theme/: tests.rs
crates/koshi-runtime/: Cargo.toml
crates/koshi-runtime/src/: client.rs  ipc_server.rs  lib.rs  placeholder.rs  runtime.rs  server.rs
crates/koshi-runtime/src/client/: tests.rs
crates/koshi-runtime/src/ipc_server/: tests.rs
crates/koshi-runtime/src/runtime/: bootstrap.rs  bus.rs  clipboard.rs  command.rs  discovery.rs  driver.rs  event.rs  hints.rs  input.rs  mouse.rs  pty_forward.rs  pty_output.rs  reload.rs  render_schedule.rs  scroll.rs  selection.rs  shutdown.rs  snapshot.rs  spawn_env.rs  state.rs  tests.rs  transaction.rs
crates/koshi-runtime/src/server/: tests.rs
crates/koshi-runtime/tests/: interactive_slice.rs
crates/koshi-session/: Cargo.toml
crates/koshi-session/src/: client.rs  error.rs  lib.rs  session.rs
crates/koshi-session/src/client/: tests.rs
crates/koshi-session/src/error/: tests.rs
crates/koshi-session/src/session/: cascade.rs  focus.rs  lifecycle.rs  pane_ops.rs  session_ops.rs  state.rs  tab_ops.rs  tests.rs
crates/koshi-session/tests/: lifecycle.rs
crates/koshi-terminal/: Cargo.toml
crates/koshi-terminal/src/: engine.rs  error.rs  lib.rs  mouse_report.rs  scrollback.rs  selection.rs  state.rs  style.rs  types.rs
crates/koshi-terminal/src/engine/: tests.rs
crates/koshi-terminal/src/grid/: state.rs  tests.rs
crates/koshi-terminal/src/mouse_report/: tests.rs
crates/koshi-terminal/src/scrollback/: tests.rs
crates/koshi-terminal/src/selection/: tests.rs
crates/koshi-terminal/src/state/: cursor.rs  cwd.rs  modes.rs  perform.rs  reflow.rs  render.rs  screen.rs  tests.rs
crates/koshi-terminal/src/style/: tests.rs
crates/koshi/src/: app.rs  cli.rs  config.rs  config_command.rs  discovery.rs  error.rs  in_session.rs  ipc_client.rs  keymap.rs  keys.rs  lib.rs  main.rs  output.rs  session_control.rs  targeting.rs  updater.rs
crates/koshi/src/app/: tests.rs
crates/koshi/src/cli/: tests.rs
crates/koshi/src/config/: tests.rs
crates/koshi/src/config_command/: tests.rs
crates/koshi/src/discovery/: tests.rs
crates/koshi/src/error/: tests.rs
crates/koshi/src/in_session/: tests.rs
crates/koshi/src/ipc_client/: tests.rs
crates/koshi/src/keymap/: tests.rs
crates/tile-cli/: Cargo.toml
crates/tile-cli/src/: app.rs  error.rs  lib.rs  main.rs  subcommand.rs
crates/tile-layout/: Cargo.toml
crates/tile-layout/src/: content.rs  edit.rs  error.rs  focus.rs  layout.rs  lib.rs  mode.rs  normalize.rs  resize.rs  size.rs  snapshot.rs  solver.rs  tree.rs
crates/tile-layout/tests/: properties.rs
crates/tile-observability/: Cargo.toml
crates/tile-observability/src/: cleanup.rs  diagnostics.rs  error.rs  lib.rs  logging.rs  tracing.rs
crates/tile-pty/: Cargo.toml
crates/tile-pty/src/: backend.rs  env.rs  error.rs  kill.rs  lib.rs  portable.rs  resize.rs
crates/tile-pty/tests/: portable.rs  portable_windows.rs
crates/tile-renderer/: Cargo.toml
crates/tile-renderer/src/: lib.rs  render.rs  snapshot.rs
crates/tile-runtime/: Cargo.toml
crates/tile-runtime/src/: lib.rs  placeholder.rs  runtime.rs
crates/tile-runtime/tests/: interactive_slice.rs
crates/tile-session/: Cargo.toml
crates/tile-session/src/: client.rs  error.rs  lib.rs  session.rs
crates/tile-session/tests/: lifecycle.rs
crates/tile-test-support/: Cargo.toml
crates/tile-test-support/src/: event_queue.rs  fake_pty.rs  fixtures.rs  layout_assert.rs  lib.rs
(+387 files in other folders)
