[workspace]
resolver = "2"
members = [
    "crates/koshi-cli",
    "crates/koshi-core",
    "crates/koshi-error",
    "crates/koshi-runtime",
    "crates/koshi-session",
    "crates/koshi-layout",
    "crates/koshi-pane",
    "crates/koshi-pty",
    "crates/koshi-terminal",
    "crates/koshi-renderer",
    "crates/koshi-input",
    "crates/koshi-config",
    "crates/koshi-plugin-api",
    "crates/koshi-plugin-host",
    "crates/koshi-plugin-manager",
    "crates/koshi-ipc",
    "crates/koshi-storage",
    "crates/koshi-observability",
    "crates/koshi-test-support",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
