[package]
name = "koshi-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror = "2.0.18"
koshi-core = { version = "0.1.0", path = "../koshi-core" }
serde = { version = "1.0.229", features = ["derive"] }
subtle = "2.6.1"

[dev-dependencies]
serde_json = "1.0.151"
