[package]
name = "koshi-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror = "2.0.18"
koshi-core = { version = "0.1.0", path = "../koshi-core" }
koshi-storage = { version = "0.1.0", path = "../koshi-storage" }
serde = { version = "1.0.229", features = ["derive"] }
subtle = "2.6.1"
interprocess = "2.4.2"
serde_json = "1.0.151"
getrandom = "0.4.3"

[target."cfg(unix)".dependencies]
libc = "0.2.188"

[dev-dependencies]
tempfile = "3.27.0"
uuid = "1.24.0"
