[package]
name = "koshi-observability"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
directories = "6.0.0"
miette = "7.6.0"
thiserror = "2.0.18"
koshi-core = { version = "0.1.0", path = "../koshi-core" }
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["json", "env-filter"] }
