[package]
name = "koshi-pty"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
portable-pty = "0.9.0"
thiserror = "2.0.18"
koshi-core = { version = "0.1.0", path = "../koshi-core" }

[target."cfg(unix)".dependencies]
nix = { version = "0.28", features = ["signal", "hostname"] }

[target."cfg(windows)".dependencies]
windows-sys = { version = "0.61", features = ["Win32_System_JobObjects", "Win32_System_Console", "Win32_System_Threading", "Win32_Foundation", "Win32_Security"] }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2.189"
