[package]
name = "koshi"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "koshi"
path = "src/lib.rs"

[[bin]]
name = "koshi"
path = "src/main.rs"

[dependencies]
ratatui = { version = "0.30.2", default-features = false, features = [
  "crossterm",
] }
thiserror = "2.0.18"
koshi-config = { version = "0.1.0", path = "../koshi-config" }
koshi-core = { version = "0.1.0", path = "../koshi-core" }
koshi-input = { version = "0.1.0", path = "../koshi-input" }
koshi-observability = { version = "0.1.0", path = "../koshi-observability" }
koshi-paths = { version = "0.1.0", path = "../koshi-paths" }
koshi-pty = { version = "0.1.0", path = "../koshi-pty" }
koshi-renderer = { version = "0.1.0", path = "../koshi-renderer" }
koshi-runtime = { version = "0.1.0", path = "../koshi-runtime" }
tracing = "0.1.44"
clap = { version = "4.6.1", features = ["derive"] }
uuid = "1.23.4"
serde_json = "1.0.150"
serde = "1.0.228"
koshi-terminal = { version = "0.1.0", path = "../koshi-terminal" }

[dev-dependencies]
koshi-test-support = { version = "0.1.0", path = "../koshi-test-support" }
