[package]
name = "tile-layout"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tile-core = { version = "0.1.0", path = "../tile-core" }

[dev-dependencies]
proptest = "1.11.0"
serde_json = "1.0.150"
tile-test-support = { version = "0.1.0", path = "../tile-test-support" }
