[package]
name = "tile-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tile-core = { version = "0.1.0", path = "../tile-core" }
tile-observability = { version = "0.1.0", path = "../tile-observability" }
tile-pty = { version = "0.1.0", path = "../tile-pty" }
tile-session = { version = "0.1.0", path = "../tile-session" }
tile-terminal = { version = "0.1.0", path = "../tile-terminal" }

[dev-dependencies]
tile-pane = { version = "0.1.0", path = "../tile-pane" }
tile-test-support = { version = "0.1.0", path = "../tile-test-support" }
