[package]
name = "tile-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tile-core = { version = "0.1.0", path = "../tile-core" }
tile-layout = { version = "0.1.0", path = "../tile-layout" }
tile-observability = { version = "0.1.0", path = "../tile-observability" }
tile-pane = { version = "0.1.0", path = "../tile-pane" }
tile-pty = { version = "0.1.0", path = "../tile-pty" }
tile-renderer = { version = "0.1.0", path = "../tile-renderer" }
tile-session = { version = "0.1.0", path = "../tile-session" }
tile-terminal = { version = "0.1.0", path = "../tile-terminal" }

[dev-dependencies]
tile-test-support = { version = "0.1.0", path = "../tile-test-support" }
