[package]
name = "tile-session"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tile-core = { version = "0.1.0", path = "../tile-core" }
tile-layout = { version = "0.1.0", path = "../tile-layout" }
tile-pane = { version = "0.1.0", path = "../tile-pane" }

[dev-dependencies]
serde_json = "1.0.150"
tile-test-support = { version = "0.1.0", path = "../tile-test-support" }
